overflow fixed

--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,6 @@ html,
 body,
 #root {
   height: 100%;
-  overflow: hidden;
 }
 
 img {
